--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Akash</h1>
-						   					<h2>Mechanical Engineer from VIT Vellore</h2>
+						   					<h2 style="color:#ffffff">Mechanical Engineer from VIT Vellore</h2>
 												<!--<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>-->
 											</div>
 					   				</div>
@@ -113,7 +113,7 @@
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Designer</h1>
-												<h2>Vector Designing and CAD/CAM</h2>
+												<h2 style="color:#ffffff">Illustrator and CAD/CAM</h2>
 												<!--<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p> -->
 											</div>
 					   				</div>
@@ -441,13 +441,13 @@
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
+							<!-- <p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p> -->
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/img-1.jpg);">
-								<div class="desc">
+								<!-- <div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
 										<span>Website</span>
@@ -457,12 +457,12 @@
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-2.jpg);">
-								<div class="desc">
+								<!-- <div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
 										<span>Animation</span>
@@ -472,12 +472,12 @@
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
 							<div class="project" style="background-image: url(images/img-3.jpg);">
-								<div class="desc">
+								<!-- <div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
 										<span>Illustration</span>
@@ -487,12 +487,12 @@
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/img-4.jpg);">
-								<div class="desc">
+								<!-- <div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 04</a></h3>
 										<span>Application</span>
@@ -502,12 +502,12 @@
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/img-5.jpg);">
-								<div class="desc">
+								<!-- <div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
 										<span>Graphic, Logo</span>
@@ -517,12 +517,12 @@
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-6.jpg);">
-								<div class="desc">
+								<!-- <div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 06</a></h3>
 										<span>Web Design</span>
@@ -532,15 +532,15 @@
 											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</section>
 
