--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
-
+		
 		</aside>
 
 		<div id="colorlib-main">
@@ -533,6 +533,10 @@
 										</p>
 									</div>
 								</div> -->
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/img-7.jpg)">
 							</div>
 						</div>
 					</div>
