--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
 									<div class="panel panel-default">
-										<div class="panel-heading" role="tab" d="headingOne">
+										<div class="panel-heading" role="tab" id="headingOne">
 											<h4 class="panel-title">
 												<a class="collapsed" data-toggle="collapse" data-parent="#accordian" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> Bachelor's Degree
 												</a>
@@ -395,16 +395,18 @@
 											</div>
 										</div>
 									</div>
+
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">VITEEE and BITSAT
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordian" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">VITEEE and BITSAT
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Gave only VITEEE and BITSAT, forgot to pay the fee for JEE. Scored <strong>289</strong> in <strong>BITSAT</strong> and <strong> 8279 </strong> in <strong> VITEEE </strong>. Joined Mechanical Engineer in VIT bacause I'm interested in car's and how speed.</p>	
+									            <p>
+												Gave only VITEEE and BITSAT, forgot to pay the fee for JEE. Scored <strong>289</strong> in <strong>BITSAT</strong> and ranked<strong> 8279 </strong> in <strong> VITEEE </strong>. Joined Mechanical Engineer in VIT bacause I'm interested in car's and designing has been my passion and mechanical was the only branch at that point of time which would make my dream come true of designing cars.</p>	
 									        </div>
 									    </div>
 									</div>
