--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I am <br>a Designer</h1>
+						   					<h1>I am <br>Love Designer</h1>
 												<h2 style="color:#ffffff">Illustrator and CAD/CAM</h2>
 												<!--<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p> -->
 											</div>
@@ -531,6 +531,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/img-8.jpg);">
 							<div class="project" style="background-image: url(images/img-8.jpg);">
 							</div>
 						</div>
